// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Divider renders a brand appearance 1`] = `
<div
  aria-labelledby="divider-_r_c_"
  aria-orientation="horizontal"
  class="fui-Divider"
  data-align-content="center"
  data-orientation="horizontal"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-_r_c_"
  >
    Brand
  </div>
</div>
`;

exports[`Divider renders a default divider 1`] = `
<div
  aria-orientation="horizontal"
  class="fui-Divider"
  data-align-content="center"
  data-empty="true"
  data-orientation="horizontal"
  role="separator"
/>
`;

exports[`Divider renders a divider with a different color 1`] = `
<div
  aria-orientation="horizontal"
  class="fui-Divider"
  color="#FF00FF"
  data-align-content="center"
  data-empty="true"
  data-orientation="horizontal"
  role="separator"
/>
`;

exports[`Divider renders a divider with content 1`] = `
<div
  aria-labelledby="divider-_r_9_"
  aria-orientation="horizontal"
  class="fui-Divider"
  data-align-content="center"
  data-orientation="horizontal"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-_r_9_"
  >
    Default Divider
  </div>
</div>
`;

exports[`Divider renders a divider with inset 1`] = `
<div
  aria-labelledby="divider-_r_a_"
  aria-orientation="horizontal"
  class="fui-Divider"
  data-align-content="center"
  data-inset="true"
  data-orientation="horizontal"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-_r_a_"
  >
    Inset
  </div>
</div>
`;

exports[`Divider renders a horizontal divider with a fixed width 1`] = `
<div
  aria-labelledby="divider-_r_l_"
  aria-orientation="horizontal"
  class="fui-Divider"
  data-align-content="center"
  data-orientation="horizontal"
  role="separator"
  style="width: 100px;"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-_r_l_"
  >
    fixed 100px width
  </div>
</div>
`;

exports[`Divider renders a strong appearance 1`] = `
<div
  aria-labelledby="divider-_r_d_"
  aria-orientation="horizontal"
  class="fui-Divider"
  data-align-content="center"
  data-orientation="horizontal"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-_r_d_"
  >
    Strong
  </div>
</div>
`;

exports[`Divider renders a subtle appearance 1`] = `
<div
  aria-labelledby="divider-_r_b_"
  aria-orientation="horizontal"
  class="fui-Divider"
  data-align-content="center"
  data-orientation="horizontal"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-_r_b_"
  >
    Subtle
  </div>
</div>
`;

exports[`Divider renders a vertical divider 1`] = `
<div
  aria-orientation="vertical"
  class="fui-Divider"
  data-align-content="center"
  data-empty="true"
  data-orientation="vertical"
  role="separator"
/>
`;

exports[`Divider renders a vertical divider with a fixed height 1`] = `
<div
  aria-labelledby="divider-_r_k_"
  aria-orientation="vertical"
  class="fui-Divider"
  data-align-content="center"
  data-orientation="vertical"
  role="separator"
  style="height: 100px;"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-_r_k_"
  >
    fixed 100px height
  </div>
</div>
`;

exports[`Divider renders a vertical divider with content 1`] = `
<div
  aria-labelledby="divider-_r_j_"
  aria-orientation="vertical"
  class="fui-Divider"
  data-align-content="center"
  data-orientation="vertical"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-_r_j_"
  >
    Vertical
  </div>
</div>
`;

exports[`Divider renders content center aligned 1`] = `
<div
  aria-labelledby="divider-_r_f_"
  aria-orientation="horizontal"
  class="fui-Divider"
  data-align-content="center"
  data-orientation="horizontal"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-_r_f_"
  >
    Center
  </div>
</div>
`;

exports[`Divider renders content end aligned 1`] = `
<div
  aria-labelledby="divider-_r_g_"
  aria-orientation="horizontal"
  class="fui-Divider"
  data-align-content="end"
  data-orientation="horizontal"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-_r_g_"
  >
    End
  </div>
</div>
`;

exports[`Divider renders content start aligned 1`] = `
<div
  aria-labelledby="divider-_r_e_"
  aria-orientation="horizontal"
  class="fui-Divider"
  data-align-content="start"
  data-orientation="horizontal"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-_r_e_"
  >
    Start
  </div>
</div>
`;
